examples/test/testpolicy15472.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15472
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key28: value47
      key1: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value13
          key23: value43
      podSelector:
        matchLabels:
          key5: value29
          key24: value17
